# mcp-lordicon

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  compose.yaml  komodo.toml  pyproject.toml
.claude/agent-memory/komodo-infra/: MEMORY.md  project_mcp_lordicon_deploy.md  reference_stack_creation.md
mcp_lordicon/: __init__.py  __main__.py  auth.py  client.py  config.py  server.py
mcp_lordicon/models/: __init__.py  icons.py  tracking.py
mcp_lordicon/tools/: __init__.py  search.py  tracking.py
openspec/changes/bootstrap-lordicon-server/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-lordicon-server/specs/download-tracking/: spec.md
openspec/changes/bootstrap-lordicon-server/specs/icon-discovery/: spec.md
openspec/changes/bootstrap-lordicon-server/specs/mcp-server-runtime/: spec.md
tests/: conftest.py  test_auth.py  test_client.py  test_health.py  test_search.py  test_tracking.py
