[project]
name = "mcp-lordicon"
version = "0.1.0"
description = "MCP server for Lordicon icon discovery built on FastMCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Casey Romkes" }]
dependencies = [
    "fastmcp>=3.2.2",
    "httpx>=0.28.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
mcp-lordicon = "mcp_lordicon.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_lordicon"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
]
